--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pytorch=1.9.0
-torchvision=0.10.0
-sklearn=1.0.1
-pillow=8.3.1
+torch==1.9.0
+torchvision
+scikit-learn
+pillow==8.3.1
 opencv-python
 matplotlib
 scipy
